# ScoreBasedDenoising

./: LICENSE  README.md  README_Template.md  pyproject.toml
.github/workflows/: python-tests.yml
Examples/: fcc_gb_example.ovito
src/ModifierName/: __init__.py
src/scoreBasedDenoising/: InitialEmbedding.py  __init__.py
src/scoreBasedDenoising/pretrained_models/: Cu-denoiser.state_dict.pt  LICENSE  SiO2-denoiser.state_dict.pt
tests/: test_modifier.py
