[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "[[ModifierName]]"
version = "[[Version number]]"
description = "[[Short description]]"
keywords = ["ovito", "python-modifier"]
authors = [{name = "[[Author 1 name]]", email = "[[Author 1 email]]"}, {name = "[[Author 2 name]]", email = "[[Author 2 email]]"}]
maintainers = [{name = "[[Maintainer 1 name]]", email = "[[Maintainer 1 email]]"}, {name = "[[Maintainer 2 name]]", email = "[[Maintainer 2 email]]"}]
license = {text = "[[License]]"}
readme = "README.md"
requires-python = "[[>=3.7]]"
dependencies = [
    "ovito >= [[VersionNumber]]", # OVITO must be >=3.9!
    # "[[dependency1]]",
    # "[[dependency2 == Version]]",
]

[project.urls]
repository = "[[Repository Link]]"

[project.entry-points.'OVITO.Modifier']
"[[Human readable modifier name]]" = "[[ModifierName]]:[[ModifierName]]"

[tool.setuptools.packages.find]
where = ["src"]