[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoreBasedDenoising"
version = "2023.2"
description = "x"
keywords = ["ovito", "python-modifier"]
authors = [{ name = "Daniel Utt", email = "utt@ovito.org" }]
maintainers = [{ name = "Daniel Utt", email = "utt@ovito.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ovito >= 3.9.1",
    "torch >= 1.11.0",
    "torch-geometric >= 2.0.4",
    "ase",
    "pandas",
    "e3nn >= 0.4.4",
    # "graphite @ git+https://github.com/LLNL/graphite.git@???", # Swap dependency one PR is accepted
    "graphite @ git+https://github.com/nnn911/graphite.git@875d73e",
]

[project.urls]
repository = "https://github.com/nnn911/ScoreBasedDenoising"

[project.entry-points.'OVITO.Modifier']
"Score-based denoising" = "scoreBasedDenoising:ScoreBasedDenoising"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scoreBasedDenoising = ["pretrained_models/*.pt", "pretrained_models/LICENSE"]
