[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoreBasedDenoising"
version = "2023.5"
description = "Score-based denoising for atomic structure identification - Iteratively subtract thermal noises or perturbations from atomic positions."
keywords = ["ovito", "ovito-extension"]
authors = [{ name = "Daniel Utt", email = "utt@ovito.org" }]
maintainers = [{ name = "Daniel Utt", email = "utt@ovito.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ovito >= 3.9.1",
    "torch >= 1.11.0",
    "torch-geometric >= 2.0.4",
    "ase",
    "pandas",
    "e3nn >= 0.4.4",
    # "graphite @ git+https://github.com/LLNL/graphite.git@",
    # Temporarily use my fork until PRs are merged upstream
    "graphite @git+https://github.com/nnn911/graphite@d068a0c",
]

[project.urls]
repository = "https://github.com/nnn911/ScoreBasedDenoising"

[project.entry-points.'OVITO.Modifier']
"Score-based denoising" = "scoreBasedDenoising:ScoreBasedDenoising"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]